fixed svg break on zoom

--- a/pages/style.css
+++ b/pages/style.css
@@ -89,8 +89,8 @@ main {
 
 .nav-link svg {
     min-width: 2rem;
+    max-width: 2rem;
     margin: 0 1.5rem;
-    max-height: 3rem;
 }
 
 .navbar:hover {
